Replace commons IOUtils usage with native java